# SkyrimTexOptimizer

./: .gitignore  CMakeLists.txt  MeshBSA.cpp  MeshBSA.h  README.md  main.cpp  main.h  processor.cpp  processor.h  resizer.cpp  resizer.h  sha2_512_256.h  textures.cpp  textures.hpp
libs/DirectXTex/: DirectXTexP.h
libs/NIF/: CMakeLists.txt  NifFile.cpp  NifFile.h
libs/NIF/utils/: Object3d.h
libs/libbsarch/: CMakeLists.txt
libs/libbsarch/src/: bs_archive.cpp
